--- a/detail/50ccWaveDealimDo.html
+++ b/detail/50ccWaveDealimDo.html
@@ -31,7 +31,7 @@
             <!-- navigation bar -->
             <ul class="nav-bar__list">
                 <li class="nav-bar__item">
-                    <a class="nav-bar__item-link" href="index.html">TRANG CHỦ</a>
+                    <a class="nav-bar__item-link" href="../index.html">TRANG CHỦ</a>
                 </li>
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">SẢN PHẨM</a>
@@ -42,21 +42,21 @@
                     <!-- sub-nav của sản phẩm -->
                     <ul class="sub-nav__list">
                         <li class="sub-nav__item">
-                            <a href="xe50cc.html">Xe 50cc</a>
+                            <a href="../xe50cc.html">Xe 50cc</a>
                         </li>
                         <li class="sub-nav__item">
-                            <a href="xeso.html">Xe số</a>
+                            <a href="../xeso.html">Xe số</a>
                         </li>
                         <li class="sub-nav__item">
-                            <a href="xetayga.html">Tay ga</a>
+                            <a href="../xetayga.html">Tay ga</a>
                         </li>
                         <li class="sub-nav__item">
-                            <a href="xemoto.html">Motor</a>
+                            <a href="../xemoto.html">Motor</a>
                         </li>
                     </ul>
                 </li>
                 <li class="nav-bar__item">
-                    <a class="nav-bar__item-link" href="gioithieu.html">GIỚI THIỆU</a>
+                    <a class="nav-bar__item-link" href="../gioithieu.html">GIỚI THIỆU</a>
                 </li>
                 <li class="nav-bar__item">
                     <a class="nav-bar__item-link" href="">HÃNG XE</a>
@@ -271,62 +271,53 @@
             </div>
 
             <h3 class="ct_list">Bạn có thể thích</h3>
-            <div id="list_container">
-                <ul id="motor_list_1">
-                    <li class="product product_1">
-                        <a href="#"><img src="../assets/image/hinhxemay/honda1.png" alt="" class="sample_1"></a>
-                        <br>
+            <div class="list_container">
+                <ul class="motor_list">
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/honda1.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">XE MÁY HONDA FUTURE 125 FI</a>
-                        <p class="price_1">31.390.000 VNĐ</p>
+                        <p class="price">31.390.000 VNĐ</p>
                     </li>
-                    <li class="product product_2">
-                        <a href="#"><img src="../assets/image/hinhxemay/SYM5.png" alt="" class="sample_2"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/SYM5.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">XE MÁY TAY GA SYM ATTILA 50CC</a>
-                        <p class="price_2">25.700.000 VNĐ</p>
+                        <p class="price">25.700.000 VNĐ</p>
                     </li>
-                    <li class="product product_3">
-                        <a href="#"><img src="../assets/image/hinhxemay/Daelim2.png" alt="" class="sample_3"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/Daelim2.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA</a>
-                        <p class="price_3">14.300.000 VNĐ</p>
+                        <p class="price">14.300.000 VNĐ</p>
                     </li>
-                    <li class="product product_4">
-                        <a href="#"><img src="../assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample_4"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample"></a>
                         <a href="#" class="motor_name">MÔ TÔ THỂ THAO YAMAHA</a>
-                        <p class="price_4">129.000.000 VNĐ</p>
+                        <p class="price">129.000.000 VNĐ</p>
                     </li>
                 </ul>
                 <br>
-                <ul id="motor_list_2">
-                    <li class="product product_1">
-                        <a href="#"><img src="../assets/image/hinhxemay/benelli2.png" alt="" class="sample_1"></a>
-                        <br>
+                <ul class="motor_list">
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/benelli2.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">BENELLI VZ125i Đỏ</a>
-                        <p class="price_1">23.999.000 VNĐ</p>
+                        <p class="price">23.999.000 VNĐ</p>
                     </li>       
-                    <li class="product product_2">
-                        <a href="#"><img src="../assets/image/hinhxemay/BMW1.png" alt="" class="sample_2"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/BMW1.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">BMW M1000RR 2022</a>
-                        <p class="price_5">1.600.000.000 VNĐ</p>
+                        <p class="price">1.600.000.000 VNĐ</p>
                     </li>
-                    <li class="product product_3">
-                        <a href="#"><img src="../assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample_3"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample"></a>
                         <a href="#" class="motor_name">YAMAHA GSX-S150</a>
-                        <p class="price_3">64.400.000 VNĐ</p>
+                        <p class="price">64.400.000 VNĐ</p>
                     </li>
-                    <li class="product product_4">
-                        <a href="#"><img src="../assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample_4"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample"></a>
                         <a href="#" class="motor_name">MÔ TÔ DUCATI MV AGUSTA</a>
-                        <p class="price_1">26.500.000 VNĐ</p>
+                        <p class="price">26.500.000 VNĐ</p>
                     </li>
                 </ul>
             </div>
-            <br>
             <div id="next_btn">
                 <a href="#" class="desc_show_more">Xem thêm sản phẩm
                     <ion-icon class="dropdown-icon" name="chevron-down-outline"></ion-icon>
