--- a/index.html
+++ b/index.html
@@ -236,91 +236,82 @@
             <br>
             <ul class="menu">
                 <li class="menu_motor_type">
-                    <a href="xetayga.html"><img class="type_1" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
+                    <a href="./xetayga.html"><img class="type_1" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
                     <br>
-                    <a href="xetayga.html" class="ct_name">Xe tay ga</a>
+                    <a href="./xetayga.html" class="ct_name">Xe tay ga</a>
                 </li>
                 <li class="menu_motor_type">
-                    <a href="xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type_2"></a>
+                    <a href="./xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type_2"></a>
                     <br>
-                    <a href="xeso.html" class="ct_name_2">Xe số</a>
+                    <a href="./xeso.html" class="ct_name_2">Xe số</a>
                 </li>
                 <li class="menu_motor_type">
-                    <a href="xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type_3"></a>
+                    <a href="./xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type_3"></a>
                     <br>
-                    <a href="xemoto.html" class="ct_name_3">Xe motor</a>
+                    <a href="./xemoto.html" class="ct_name_3">Xe motor</a>
                 </li>
                 <li class="menu_motor_type">
-                    <a href="xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type_4"></a>
+                    <a href="./xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type_4"></a>
                     <br>
-                    <a href="xe50cc.html" class="ct_name_4">Xe 50cc</a>
+                    <a href="./xe50cc.html" class="ct_name_4">Xe 50cc</a>
                 </li>
                 <li class="menu_motor_type">
-                    <a href="xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type_5"></a>
+                    <a href="./xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type_5"></a>
                     <br>
-                    <a href="xecontay.html" class="ct_name_5">Xe côn tay</a>
+                    <a href="./xecontay.html" class="ct_name_5">Xe côn tay</a>
                 </li>
             </ul>
-            <h3 class="ct_list">Xe mới đăng</h3>
-            <div id="list_container">
-                <ul id="motor_list_1">
-                    <li class="product_1">
-                        <a href="#"><img src="./assets/image/hinhxemay/honda1.png" alt="" class="sample_1"></a>
-                        <br>
-                        <a href="#" class="motor_name">XE MÁY HONDA FUTURE 125 FI VÀNH ĐÚC</a>
-                        <p class="price_1">31.390.000 VNĐ</p>
+            <h3 class="ct_list">Bạn có thể thích</h3>
+            <div class="list_container">
+                <ul class="motor_list">
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/honda1.png" alt="" class="sample"></a>
+                        <a href="#" class="motor_name">XE MÁY HONDA FUTURE 125 FI</a>
+                        <p class="price">31.390.000 VNĐ</p>
                     </li>
-                    <li class="product_2">
-                        <a href="#"><img src="./assets/image/hinhxemay/SYM5.png" alt="" class="sample_2"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/SYM5.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">XE MÁY TAY GA SYM ATTILA 50CC</a>
-                        <p class="price_2">25.700.000 VNĐ</p>
+                        <p class="price">25.700.000 VNĐ</p>
                     </li>
-                    <li class="product_3">
-                        <a href="#"><img src="./assets/image/hinhxemay/Daelim2.png" alt="" class="sample_3"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/Daelim2.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA</a>
-                        <p class="price_3">14.300.000 VNĐ</p>
+                        <p class="price">14.300.000 VNĐ</p>
                     </li>
-                    <li class="product_4">
-                        <a href="#"><img src="./assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample_4"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample"></a>
                         <a href="#" class="motor_name">MÔ TÔ THỂ THAO YAMAHA</a>
-                        <p class="price_4">129.000.000 VNĐ</p>
+                        <p class="price">129.000.000 VNĐ</p>
                     </li>
                 </ul>
                 <br>
-                <ul id="motor_list_2">
-                    <li class="product_1">
-                        <a href="#"><img src="./assets/image/hinhxemay/benelli2.png" alt="" class="sample_1"></a>
-                        <br>
-                        <a href="#" class="motor_name">BENELLI VZ125i đỏ</a>
-                        <p class="price_1">23.999.000 VNĐ</p>
+                <ul class="motor_list">
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/benelli2.png" alt="" class="sample"></a>
+                        <a href="#" class="motor_name">BENELLI VZ125i Đỏ</a>
+                        <p class="price">23.999.000 VNĐ</p>
                     </li>       
-                    <li class="product_2">
-                        <a href="#"><img src="./assets/image/hinhxemay/BMW1.png" alt="" class="sample_2"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/BMW1.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">BMW M1000RR 2022</a>
-                        <p class="price_5">1.600.000.000 VNĐ</p>
+                        <p class="price">1.600.000.000 VNĐ</p>
                     </li>
-                    <li class="product_3">
-                        <a href="#"><img src="./assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample_3"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample"></a>
                         <a href="#" class="motor_name">YAMAHA GSX-S150</a>
-                        <p class="price_3">64.400.000 VNĐ</p>
+                        <p class="price">64.400.000 VNĐ</p>
                     </li>
-                    <li class="product_4">
-                        <a href="#"><img src="./assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample_4"></a>
-                        <br>
+                    <li class="product">
+                        <a href="#"><img src="../assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample"></a>
                         <a href="#" class="motor_name">MÔ TÔ DUCATI MV AGUSTA</a>
-                        <p class="price_1">26.500.000 VNĐ</p>
+                        <p class="price">26.500.000 VNĐ</p>
                     </li>
                 </ul>
             </div>
-            <br>
             <div id="next_btn">
                 <a href="#" class="desc_show_more">Xem thêm sản phẩm
-                    <ion-icon name="chevron-down-outline"></ion-icon>
+                    <ion-icon class="dropdown-icon" name="chevron-down-outline"></ion-icon>
                 </a>
             </div>
         </div>
