--- a/index.html
+++ b/index.html
@@ -265,22 +265,22 @@
             <div class="list_container">
                 <ul class="motor_list">
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/honda1.png" alt="" class="sample"></a>
+                        <a href="#"><img src="./assets/image/hinhxemay/honda1.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">XE MÁY HONDA FUTURE 125 FI</a>
                         <p class="price">31.390.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/SYM5.png" alt="" class="sample"></a>
+                        <a href="#"><img src="./assets/image/hinhxemay/SYM5.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">XE MÁY TAY GA SYM ATTILA 50CC</a>
                         <p class="price">25.700.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/Daelim2.png" alt="" class="sample"></a>
+                        <a href="#"><img src="./assets/image/hinhxemay/Daelim2.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA</a>
                         <p class="price">14.300.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample"></a>
+                        <a href="#"><img src="./assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample"></a>
                         <a href="#" class="motor_name">MÔ TÔ THỂ THAO YAMAHA</a>
                         <p class="price">129.000.000 VNĐ</p>
                     </li>
@@ -288,22 +288,22 @@
                 <br>
                 <ul class="motor_list">
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/benelli2.png" alt="" class="sample"></a>
+                        <a href="#"><img src="./assets/image/hinhxemay/benelli2.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">BENELLI VZ125i Đỏ</a>
                         <p class="price">23.999.000 VNĐ</p>
                     </li>       
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/BMW1.png" alt="" class="sample"></a>
+                        <a href="#"><img src="./assets/image/hinhxemay/BMW1.png" alt="" class="sample"></a>
                         <a href="#" class="motor_name">BMW M1000RR 2022</a>
                         <p class="price">1.600.000.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample"></a>
+                        <a href="#"><img src="./assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample"></a>
                         <a href="#" class="motor_name">YAMAHA GSX-S150</a>
                         <p class="price">64.400.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample"></a>
+                        <a href="#"><img src="./assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample"></a>
                         <a href="#" class="motor_name">MÔ TÔ DUCATI MV AGUSTA</a>
                         <p class="price">26.500.000 VNĐ</p>
                     </li>
