chinh sua nho cho chu products

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <ul class="motor_list">
                     <li class="product">
                         <a href="#"><img src="./assets/image/hinhxemay/benelli2.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">BENELLI VZ125i Đỏ</a>
+                        <a href="#" class="motor_name">BENELLI VZ125i ĐỎ</a>
                         <p class="price">23.999.000 VNĐ</p>
                     </li>       
                     <li class="product">
